2009-09-24  Frank Warmerdam  <warmerdam@pobox.com>

	* Preparing 1.3.0 release.

	* geo_normalize.c/h, geotiff_proj4.c: Added DefnSet to GTIFDefn so 
	it can be properly established if a definition was set or if there
	were no geokeys (#12).  Corrects serious interim bug in geotiff_proj4.c

	* geo_new.c: avoid buffer overrun on corrupt input file (#14).

	* geo_print.c: Improve the precision when formatting values (#13).

2009-06-05  Paul Ramsey

	* csv: Update the EPSG csv files to the 7.1 release of the database.

2009-06-03  Frank Warmerdam  <warmerdam@pobox.com>

	* geo_normalize.c: add support for LAEA, as contributed by EvenR.
	http://trac.osgeo.org/gdal/ticket/3016

2009-05-20  Frank Warmerdam  <warmerdam@pobox.com>

	* csv/add_esri_column.py, csv/esri_datum_override.csv: Added a bunch
	of manual ESRI datum name overrides - related to GDAL r17058.

2009-05-18  Frank Warmerdam  <warmerdam@pobox.com>

	* COPYING: remove inadvertent GPL license, refer to LICENSE file.

2009-05-03  Frank Warmerdam  <warmerdam@pobox.com>

	* geo_print.c: Use %s format string in fprintf for arbitrary messages.
	http://trac.osgeo.org/gdal/ticket/2976

2009-04-22  Frank Warmerdam  <warmerdam@pobox.com>

	* geo_normalizec: Do not call CSVDeaccess() by default in getdefn - 
	leave it to the application.  

	* Remove all the $Log logs.

2009-04-03  Frank Warmerdam  <warmerdam@pobox.com>

	* geotiff_proj4.c: fix case for setting LCC 2SP GeoTIFF from proj.4.

2009-02-23  Frank Warmerdam  <warmerdam@pobox.com>

	* *.c, *.h: Include appropriate copyright messages where missing (#8).

	* geotiff_proj4.c: Fix some buffer overflow holes (#9).

2009-02-18  Frank Warmerdam  <warmerdam@pobox.com>

	* geo_simpletags.c: compute "count" for ascii tag values.

2008-12-29  Frank Warmerdam  <warmerdam@pobox.com>

	* geo_normalize.c: Optimizations to avoid opening CSV files for
	"well known" definitions. (#4).

	* geotiff_proj4.c: Reduce change of szUnits overflow (#3).
