@@ -1,5 +1,7 @@
 2009-09-24  Frank Warmerdam  <warmerdam@pobox.com>
 
+	* autogen.sh: adjust to avoid version conflicts (#10).
+
 	* Preparing 1.3.0 release.
 
 	* geo_normalize.c/h, geotiff_proj4.c: Added DefnSet to GTIFDefn so 
